2006-05-13  Don Allingham  <don@gramps-project.org>
	* src/plugins/RelCalc.py: provide default search value

2006-05-12  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: add non-functioning (for now) clear
	button
	* src/Config/_GrampsGconfKeys.py: get_default fix
	* src/GrampsCfg.py: add revert option for colors
	* src/Config/_GrampsGconfKeys.py: added get_default
	* src/Config/_GrampsIniKeys.py: added get_default

2006-05-12  Alex Roitman  <shura@gramps-project.org>
	* data/gramps.schemas.in: Brighter colors to use with foreground.
	* src/GrampsCfg.py (add_color): Update text label after color change.
	* src/Config/_GrampsGconfKeys.py (get_default): Allow other types.
	* src/GrampsCfg.py (reset_colors): Emit color-set signal to
	trigget hex text updates.
	* src/Config/_GrampsIniKeys.py (get_default): Add optional arg
	indicating type.

2006-05-12  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: move ScratchPad to Edit
	* src/GrampsCfg.py: fix color dialog buttons
	* src/Filters/Rules/Person/_HasEvent.py: handle EventType
	* src/DataViews/_PersonView.py: set up new filter fields, remove
	source field
	* src/Filters/Rules/Person/_RegExpIdOf.py: added
	* src/Filters/Rules/Person/__init__.py: added new files
	* src/Filters/Rules/Person/_HasNoteMatchingSubstringOf.py
	* src/Filters/Rules/Person/_HasBirth.py: use loose_data_cmp
	* src/Filters/Rules/Person/_SearchName.py: search all fields
	* src/Filters/Rules/Person/_HasDeath.py: use loose_data_cmp
	* src/Filters/Rules/Person/_RegExpName.py: added
	* src/Filters/Rules/Person/_MatchIdOf.py: added
	* src/Filters/Rules/Person/_HasNoteRegexp.py: added
	* src/Filters/Rules/Person/Makefile.am: added new files
	* src/Filters/Rules/_RuleUtils.py: added loose_date_cmp

2006-04-26  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* data/gramps.schemas.in: Swap colors for ToDo and complete. Using
	green is more obvious for complete records.

2006-05-12  Alex Roitman  <shura@gramps-project.org>